services/frontend-service/src/ui/components/ReleaseCard/ReleaseCard.scss
@use '@material/typography/mdc-typography';
@use '@material/card/mdc-card';

.release-card {
  border-radius: 10px;
  min-height: 228px;
  min-width: 512px;
  max-width: 512px;
  margin: 12px;
  color: var(--mdc-theme-on-surface);
  box-shadow: none;

  .release-card__description {
    height: 100%;
    padding: 0 16px 16px 16px;
  }
}

.release-card__header {
  padding: 16px 16px 8px 16px;
  display: flex;
  justify-content: space-between;

  .release__title{ 
    @extend .sub-headline1;
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
  }

  .release__hash {
    @extend .text-regular;
    min-width: auto;
    border: 1px solid var(--mdc-theme-secondary);
    border-radius: 15px;
    color: var(--mdc-theme-secondary);
  }

  .release__hash:hover {
    background: var(--mdc-theme-secondary);
    color: var(--mdc-theme-on-secondary);
  }
}

.release__details {
  height: 100%;
  div {
    @extend .text-regular;
  }
  .release__metadata {
    display: flex;
    div:first-child {
      margin-right: 2em;
    }
  }

}

.release-environment {
  background-color: grey;
  .mdc-evolution-chip__text-label {
    color: white;
    font-weight: bold;
    font-size: 1.2em;
  }
}
.release-environment.release-environment-prod {
  background-color: #50C241;
}
.release-environment.release-environment-pre_prod {
  background-color: #00AFFF;
}
.release-environment.release-environment-upstream {
  background-color: #FF8A00;
}

.release__environments {
  @extend .text-bold;

  > *:not(:last-child) {
    margin-right: 8px;
  }
}

